--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <div class="box">
         <div class="menu">
-            <h1 class="menu-text">MENU</h1>
+            <h1 class="menu-text">
+                M
+                E
+                N
+                U
+            </h1>
         </div>
             <ul class="list">
                 <li class="item"><a href="#">Home</a></li>
