--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
@@ -8,28 +9,28 @@
     <link rel="stylesheet" href="style.css">
     <title>Hw11</title>
 </head>
+
 <body>
     <div class="box">
         <div class="menu">
             <h1 class="menu-text">
-                M
-                E
-                N
-                U
+                MENU HERE
             </h1>
         </div>
-            <ul class="list">
-                <li class="item"><a href="#">Home</a></li>
-                <li class="item"><a href="#">Team</a></li>
-                <li class="item"><a href="#">News</a></li>
-                <li class="item"><a href="#">About</a></li>
-                <li class="item"><a href="#">Contact</a></li>
-            </ul>
-        </div>
+
+        <ul class="list">
+            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="#">Team</a></li>
+            <li class="item"><a href="#">News</a></li>
+            <li class="item"><a href="#">About</a></li>
+            <li class="item"><a href="#">Contact</a></li>
+        </ul>
+    </div>
     <div class="container">
-<div class="box1"></div>
-<div class="box1"></div>
-<div class="box1"></div>
+        <div class="box1"></div>
+        <div class="box1"></div>
+        <div class="box1"></div>
     </div>
 </body>
+
 </html>
