--- a/index.html
+++ b/index.html
@@ -1,36 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Hw11</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+        <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="css/main.min.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="box">
-        <div class="menu">
-            <h1 class="menu-text">
-                MENU HERE
-            </h1>
+    
+    <header class="page-header">
+        <div class="container">
+            <nav class="menu">
+                <a href="/" class="logo"><span class="web">Web</span>Studio</a>
+                <ul class="menu-nav">
+                    <li class="nav-item"><a href="" class="menu-nav-link">Студія</a></li>
+                    <li class="nav-item"><a href="" class="menu-nav-link">Портфоліо</a></li>
+                    <li class="nav-item"><a href="" class="menu-nav-link">Контакти</a></li>
+                </ul>
+                <ul class="header-contact">
+                    <li class="header-contact-item email_header">
+                        <a href="" class="header-contact-list">
+                            <svg class="header-icon" width="16px"   height="12px">
+                                <use href="img/sprite.svg#email"></use>
+                            </svg>info@devstudio.com</a>
+                    </li>
+                    <li class="header-contact-item number_header">
+                        <a href="" class="header-contact-list">
+                            <svg class="header-icon" width="10px"   height="16px">
+                                <use href="img/sprite.svg#Phone"></use>
+                            </svg>+38 096 111 11 11</a>
+                    </li>
+                </ul>
+                <button type="button" class="menu-open">
+                    <svg class="menu-open-icon" width="18" height="18">
+                        <use href="./img/sprite.svg#menu"></use>
+                    </svg>
+                </button>
+            </nav>
         </div>
+    </header>
 
-        <ul class="list">
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">Team</a></li>
-            <li class="item"><a href="#">News</a></li>
-            <li class="item"><a href="#">About</a></li>
-            <li class="item"><a href="#">Contact</a></li>
-        </ul>
-    </div>
-    <div class="container">
-        <div class="box1"></div>
-        <div class="box1"></div>
-        <div class="box1"></div>
-    </div>
+    <main>
+        <div>
+            <section class="hero section">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнес</h1>
+                <button type="button" class="hero-button">Замовити послугу</button>
+            </section>
+
+            <section class="feature section">
+                <div class="container">
+                <ul class="feature-list">
+                    <li class="feature-item">
+                        <div class="wrap-icon">
+                        <svg class="details" width="70"  height="70">
+                            <use href="img/sprite.svg#antenna"></use>
+                        </svg>
+                        </div>
+                        <h3 class="robota">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="lorem">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit. Voluptatem veritatis
+                            exercitationem velit magnam iure.</p>
+                    </li>
+                    <li class="feature-item">
+                        <div class="wrap-icon">
+                        <svg class="details" width="70"  height="70">
+                            <use href="img/sprite.svg#clock"></use>
+                        </svg>
+                        </div>
+                        <h3 class="robota">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="lorem">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit. Voluptatem veritatis
+                            exercitationem velit magnam iure.</p>
+                    </li>
+                    <li class="feature-item">
+                        <div class="wrap-icon">
+                        <svg class="details" width="70"  height="70">
+                            <use href="img/sprite.svg#diagram"></use>
+                        </svg>
+                        </div>
+                        <h3 class="robota">ПЛАНУВАННЯ</h3>
+                        <p class="lorem">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit. Voluptatem veritatis
+                            exercitationem velit magnam iure.</p>
+                    </li>
+                    <li class="feature-item">
+                        <div class="wrap-icon">
+                        <svg class="details" width="70"  height="70">
+                            <use href="img/sprite.svg#astronaut"></use>
+                        </svg>
+                    </div>
+                        <h3 class="robota">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="lorem">Lorem ipsum dolor sit amet, consectetur
+                            adipisicing elit. Voluptatem veritatis
+                            exercitationem velit magnam iure.</p>
+                    </li>
+                </ul>
+                </div>
+            </section>
+
+            <section class="section2 section-works section">
+                <div class="container">
+                    <h3 class="work">Чим ми займаємося</h3>
+                    <ul class="future work-list">
+                    <li class="work-img">
+                        <img src="img/laptop.jpg" alt="">
+                    </li>
+                    <li class="work-img">
+                        <img src="img/tablet.jpg" alt="">
+                    </li>
+                    <li class="work-img">
+                        <img src="img/colors.jpg" alt="">
+                    </li>
+                </ul>
+                </div>
+            </section>
+
+            <section class="section3 section">
+                <div class="container">
+                <h3 class="team">Наша команда</h3>
+                <ul class="team-list">
+                    <li class="team-item">
+                        <img src="img/third_man.jpg" width="210" height="210" alt="">
+                        <h3 class="name">Ігор Дем’яненко</h3>
+                        <p class="info">Product Designer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="img/woman.jpg" width="210" height="210" alt="">
+                        <h3 class="name">Ольга Репіна</h3>
+                        <p class="info">Frontend Developer</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="img/second_man.jpg" width="210" height="210" alt="">
+                        <h3 class="name">Микола Тарасов</h3>
+                        <p class="info">Marketing</p>
+                    </li>
+                    <li class="team-item">
+                        <img src="img/man.jpg" width="210" height="210" alt="">
+                        <h3 class="name">Михайло Єрмаков</h3>
+                        <p class="info">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
+            </section>
+            <section class="section-clients">
+                <div class="container">
+                    <h3 class="clients-title">Постійні клієнти</h3>
+                    <ul class="clients">
+                        <li class="clients-item">
+                            <svg class="clients-icon" width="44"  height="49">
+                                <use href="img/sprite.svg#logo-1"></use>
+                            </svg>
+                        </li>
+                        <li class="clients-item">
+                            <svg class="clients-icon" width="40"  height="52">
+                                <use href="img/sprite.svg#logo-2"></use>
+                            </svg>
+                        </li>
+                        <li class="clients-item">
+                            <svg class="clients-icon" width="41"  height="43">
+                                <use href="img/sprite.svg#logo-3"></use>
+                            </svg>
+                        </li>
+                        <li class="clients-item">
+                            <svg class="clients-icon" width="80"  height="42">
+                                <use href="img/sprite.svg#logo-4"></use>
+                            </svg>
+                        </li>
+                        <li class="clients-item">
+                            <svg class="clients-icon" width="59"  height="47">
+                                <use href="img/sprite.svg#logo-5"></use>
+                            </svg>
+                        </li>
+                        <li class="clients-item">
+                            <svg class="clients-icon" width="89"  height="46">
+                                <use href="img/sprite.svg#logo-6"></use>
+                            </svg>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+        <ul>
+            <li class="WebStudio WebStudio_footer"><a class="studio_footer" href="#"><span class="web">Web</span>Studio</a></li>
+          </ul>
+          <ul class="footer">
+            <li class="place">м. Київ, пр-т Лесі Українки, 26</li>
+            <li class="email1">info@example.com</li>
+            <li class="number1">+38 099 111 11 11</li>
+          </ul>
+        </div>
+    </footer>
+
 </body>
-
 </html>
