my fourth final commit

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                         <img src="img/laptop.jpg" alt="">
                     </li>
                     <li class="work-img">
-                        <img src="img/tablet.jpg" alt="">
+                        <img src="img/colors.jpg" alt="">
                     </li>
                     <li class="work-img">
-                        <img src="img/colors.jpg" alt="">
+                        <img src="img/tablet.jpg" alt="">
                     </li>
                 </ul>
                 </div>
@@ -128,7 +128,7 @@
                 <h3 class="team">Наша команда</h3>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img src="img/third_man.jpg" width="210" height="210" alt="">
+                        <img src="img/man.jpg" width="210" height="210" alt="">
                         <h3 class="name">Ігор Дем’яненко</h3>
                         <p class="info">Product Designer</p>
                     </li>
@@ -143,7 +143,7 @@
                         <p class="info">Marketing</p>
                     </li>
                     <li class="team-item">
-                        <img src="img/man.jpg" width="210" height="210" alt="">
+                        <img src="img/second_man.jpg" width="210" height="210" alt="">
                         <h3 class="name">Михайло Єрмаков</h3>
                         <p class="info">UI Designer</p>
                     </li>
